# Rust-Kafka-Inference

./: .env.example  README.md  docker-compose.yml  nginx.conf
ai_service/: .env.example  Dockerfile  requirements.txt
ai_service/app/: config.py  main.py  models.py  routes.py
data_service/: .env.example  Cargo.toml  Dockerfile
data_service/src/: config.rs  handlers.rs  kafka_producer.rs  main.rs
inference_service/: .env.example  Cargo.toml  Dockerfile
inference_service/src/: config.rs  inference.rs  kafka_config.rs  main.rs
result_service/: .env.example  Cargo.toml  Dockerfile
result_service/src/: config.rs  db_client.rs  kafka_consumer.rs  main.rs  websocket.rs
ui-service/: Dockerfile  package-lock.json  package.json
ui-service/src/app/: globals.css  layout.tsx  page.tsx
ui-service/src/app/api/subscribe/: route.ts
ui-service/src/app/components/Button/: CtaButton.tsx
ui-service/src/app/components/Loading/: Loading.tsx
ui-service/src/app/components/Results/: Results.tsx
ui-service/src/app/components/TextInput/: TextInput.tsx
ui-service/src/app/hooks/: useWebSocket.ts
