[package]
name = "data_service"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.29.0", features = ["tokio"] }  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "1.28.1", features = ["full"]}
url = "2.3.1"
axum = "0.7.5"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.0", features = ["trace"] }
dotenv = "0.15.0"
