[package]
name = "inference_service"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = "0.29.0"  
serde = "1.0"  
serde_json = "1.0"  
tokio = { version = "1", features = ["full"] }  
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.0", features = ["trace"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = ["json"] }