[package]
name = "result_service"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = "0.29.0"  
serde = "1.0"  
serde_json = "1.0"  
tokio = { version = "1", features = ["full"] }  
tokio-postgres = "0.7.11"
postgres = {version = "0.17.3" , features = ["with-serde_json-1"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.0", features = ["trace"] }
warp = "0.3" 
uuid = { version = "1.10.0", features = ["v4"] }
tokio-stream = "0.1.15"
futures-util = "0.3.30"
tokio-util = "0.7.11"
dotenv = "0.15.0"
